--- a/veterinary/templates/base.html
+++ b/veterinary/templates/base.html
@@ -25,7 +25,7 @@
             </li>
             {% if current_user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Animais</a>
+                    <a class="nav-link" href="{{ url_for('animals_page') }}">Animais</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Consultas</a>
