--- a/veterinary/templates/includes/animals_modal.html
+++ b/veterinary/templates/includes/animals_modal.html
@@ -86,3 +86,41 @@
         </div>
     </div>
 </div>
+
+
+<!-- Update Health Animal -->
+<div class="modal fade" id="Modal-UpdateHealth-{{ animal.id }}"
+     tabindex="-1"
+     aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="ModalLabel">
+                    <!-- -->
+                    Atualizando Saúde de {{ animal.name }}
+                </h5>
+                <button type="button" class="close"
+                        data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form method="POST" class="form-register" style="color:white">
+                    {{ update_health_form.hidden_tag() }}
+
+                    {{ update_health_form.health.label() }}
+                    {{ update_health_form.health(class="form-control") }}
+
+                    <br>
+                    <input id="updated_health" name="updated_health" type="hidden" value="{{ animal.id }}">
+                    {{ update_health_form.submit(class="btn btn-lg btn-block btn-primary") }}
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary"
+                        data-dismiss="modal">Fechar
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
