git add consultations page

--- a/veterinary/templates/animals.html
+++ b/veterinary/templates/animals.html
@@ -6,7 +6,7 @@ Animais
 {% block content %}
 
 <div class="row" style="margin-top:20px; margin-left:20px; margin-right:20px">
-    <h2>Animais cadastrados</h2>
+    <h2>Animais Cadastrados</h2>
     <br>
     <table class="table table-hover table-dark">
         <thead>
