--- a/veterinary/templates/base.html
+++ b/veterinary/templates/base.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="{{ url_for('animals_page') }}">Animais</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Consultas</a>
+                    <a class="nav-link" href="{{ url_for('consultations_page') }}">Consultas</a>
                 </li>
             {% endif %}
         </ul>
