--- a/veterinary/templates/includes/add_animal_modal.html
+++ b/veterinary/templates/includes/add_animal_modal.html
@@ -1,50 +1,29 @@
-<style>
-  .modal-content {
-    background-color: #212121
-  }
+{% extends 'includes/base_modal.html' %}
 
 
+{% block id %}
+    "Modal-AddIAnimal"
+{% endblock %}
 
-</style>
+
+{% block modal_title %}
+    Cadastrando um animal
+{% endblock %}
 
 
-<!-- Adding Animal -->
-<div class="modal fade" id="Modal-AddIAnimal"
-     tabindex="-1"
-     aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title " id="ModalLabel">
-                    <!-- -->
-                    Cadastrando um animal
-                </h5>
-                <button type="button" class="close"
-                        data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form method="POST" class="form-register" style="color:white">
-                    {{ register_animal_form.hidden_tag() }}
+{% block modal_body %}
+    <form method="POST" class="form-register" style="color:white">
+        {{ register_animal_form.hidden_tag() }}
 
-                    {% for key in register_animal_form %}
-                        {% if key.type != 'SubmitField' and key.type != 'CSRFTokenField' %}
-                            {{ key.label() }}
-                            {{ key(class="form-control") }}
-                        {% endif %}
-                    {% endfor %}
+        {% for key in register_animal_form %}
+            {% if key.type != 'SubmitField' and key.type != 'CSRFTokenField' %}
+                {{ key.label() }}
+                {{ key(class="form-control") }}
+            {% endif %}
+        {% endfor %}
 
-                    <br>
+        <br>
 
-                    {{ register_animal_form.submit(class="btn btn-lg btn-block btn-primary") }}
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary"
-                        data-dismiss="modal">Fechar
-                </button>
-            </div>
-        </div>
-    </div>
-</div>
+        {{ register_animal_form.submit(class="btn btn-lg btn-block btn-primary") }}
+    </form>
+{% endblock %}
